[build-system]
build-backend = "cmeel"
requires = [
  "cmeel[build]",
  "pin[build] >=  3",
  "rhoban-cmeel-jsoncpp"
]

[project]
authors = [{ email = "team@rhoban.com", name = "Rhoban team" }]
classifiers = []
dependencies = [
  "pin >= 3",
  "cmeel-boost",
  "cmeel-octomap",
  "rhoban-cmeel-jsoncpp"
]
description = "Build wheel test"
license = "MIT"
name = "placo"
requires-python = ">= 3.9"
version = "0.0.1"

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py39"

[tool.tomlsort]
all = true

[tool.cmeel]
run-tests = false
