[build-system]
build-backend = "cmeel"
requires = [
  "cmeel[build]",
  "pin[build] >=  3",
  "rhoban-cmeel-jsoncpp",
  "doxystub"
]

[project]
authors = [{ email = "team@rhoban.com", name = "Rhoban team" }]
classifiers = []
dependencies = [
  "pin",
  "rhoban-cmeel-jsoncpp"
]
description = "Build wheel test"
license = "MIT"
name = "build_wheel_test"
requires-python = ">= 3.9"
version = "0.0.2"

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py39"

[tool.tomlsort]
all = true

[tool.cmeel]
run-tests = false

[tool.cibuildwheel.macos]
before-all = "brew install doxygen"

[tool.cibuildwheel.linux]
before-all = "yum install -y doxygen"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add doxygen"

